@@ -604,6 +604,11 @@ Deprecated features
   ``__package__`` are not defined now raises an :exc:`ImportWarning`.
   (Contributed by Rose Ames in :issue:`25791`.)
 
+* Unlike to other :mod:`dbm` implementations, the :mod:`dbm.dumb` module
+  creates database in ``'r'`` and ``'w'`` modes if it doesn't exist and
+  allows modifying database in ``'r'`` mode.  This behavior is now deprecated
+  and will be removed in 3.8.
+  (Contributed by Serhiy Storchaka in :issue:`21708`.)
 
 Deprecated Python behavior
 --------------------------
